--- a/Foundit/Gemfile
+++ b/Foundit/Gemfile
@@ -26,6 +26,7 @@ gem 'jquery-rails'
 gem 'paperclip'
 
 gem 'cocaine', '0.3.2'
+gem 'rails-erd'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
